--- a/frontend/src/components/NavBar/styles.scss
+++ b/frontend/src/components/NavBar/styles.scss
@@ -29,3 +29,12 @@ li span:hover {
 .active {
   background-color: #4caf50 !important;
 }
+
+.encryption {
+  margin: 1rem 1rem 0 0;
+  float: right;
+
+  input {
+    margin-left: 0.5rem;
+  }
+}
