--- a/frontend/src/components/Send/styles.scss
+++ b/frontend/src/components/Send/styles.scss
@@ -11,7 +11,22 @@ form {
   }
 
   .field {
+    padding: 0rem 0.2rem;
+    font-size: 1rem;
+    min-height: 1.4rem;
     margin-bottom: 1rem;
     width: 100%;
+  }
+
+  .sign {
+    cursor: pointer;
+    font-size: 1.2rem;
+  }
+
+  .checkbox {
+    cursor: pointer;
+    margin-left: 0.5rem;
+    height: 1rem;
+    width: 1rem;
   }
 }
