--- a/frontend/src/components/Inbox/styles.scss
+++ b/frontend/src/components/Inbox/styles.scss
@@ -55,7 +55,11 @@ form {
     }
 
     .body {
-      white-space: pre;
+      white-space: pre-wrap;      /* CSS3 */   
+      white-space: -moz-pre-wrap; /* Firefox */    
+      white-space: -pre-wrap;     /* Opera <7 */   
+      white-space: -o-pre-wrap;   /* Opera 7 */    
+      word-wrap: break-word;      /* IE */
     }
   }
 }
